--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
         }
     },
     "dependencies": {
+        "@ark-ui/react": "^5.30.0",
         "@base-ui/react": "^1.1.0",
-        "@dchighs/dc-assets": "^0.4.1",
+        "@dchighs/dc-assets": "^0.4.2",
+        "@dchighs/dc-config": "^0.0.2",
         "@dchighs/dc-core": "^0.3.0",
+        "@dchighs/dc-localization": "^0.0.6",
         "@fontsource-variable/outfit": "^5.2.8",
         "@hookform/resolvers": "^5.2.2",
         "@tailwindcss/vite": "^4.1.18",
+        "@uidotdev/usehooks": "^2.4.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "framer-motion": "^12.26.2",
         "lucide-react": "^0.562.0",
         "next-themes": "^0.4.6",
