--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
         "@dchighs/dc-localization": "^0.0.6",
         "@fontsource-variable/outfit": "^5.2.8",
         "@hookform/resolvers": "^5.2.2",
+        "@marcuth/dds-to-png": "^0.0.2",
         "@tailwindcss/vite": "^4.1.18",
         "@uidotdev/usehooks": "^2.4.1",
+        "adm-zip": "^0.5.16",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "cors": "^2.8.5",
+        "express": "^5.2.1",
         "framer-motion": "^12.26.2",
         "lucide-react": "^0.562.0",
         "next-themes": "^0.4.6",
@@ -54,7 +58,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
+        "@types/adm-zip": "^0.5.7",
+        "@types/cors": "^2.8.19",
         "@types/electron": "^1.4.38",
+        "@types/express": "^5.0.6",
         "@types/node": "^24.10.9",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
